// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/AddressForm default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c15 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c12 {
  margin-bottom: 1.875rem;
}

.c14 {
  top: 100%;
}

.c9 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c6:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c7 {
  position: relative;
  width: 100%;
}

.c8 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c13 {
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c10 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 > div {
  width: calc(50% - 1.875rem / 2);
}

.c11 {
  width: 100%;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c4 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="given-name"
                  className="c8"
                  data-cy="addressFormFirstNameField"
                  disabled={false}
                  name="firstName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  First Name
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="family-name"
                  className="c8"
                  data-cy="addressFormLastNameField"
                  disabled={false}
                  name="lastName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Last Name
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="organization"
                  className="c8"
                  data-cy="addressFormCompanyNameField"
                  disabled={false}
                  name="companyName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Company Name (Optional)
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="tel"
                  className="c8"
                  data-cy="addressFormPhoneField"
                  disabled={false}
                  name="phone"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Phone
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c11"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-line1"
                  className="c8"
                  data-cy="addressFormStreetAddress1Field"
                  disabled={false}
                  name="streetAddress1"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Address line 1
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c11"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-line2"
                  className="c8"
                  data-cy="addressFormStreetAddress2Field"
                  disabled={false}
                  name="streetAddress2"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Address line 2
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-level1"
                  className="c8"
                  data-cy="addressFormCityField"
                  disabled={false}
                  name="city"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  City
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="postal-code"
                  className="c8"
                  data-cy="addressFormPostalCodeField"
                  disabled={false}
                  name="postalCode"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  ZIP/Postal Code
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c12"
          >
            <div
              className="css-1pcexqc-container"
              onKeyDown={[Function]}
            >
              <div
                className="css-133ddnz-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-tntsk8"
                >
                  <div
                    className="css-151xaom-placeholder"
                  >
                    
                  </div>
                  <div
                    className="css-1g6gooi"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        data-cy="addressFormCountry"
                        disabled={false}
                        id="react-select-7-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c13"
                  rotate="false"
                >
                  <svg
                    height={10}
                    viewBox="0 0 32 32"
                    width={10}
                  >
                    <path
                      d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                      fill="#21125E"
                    />
                  </svg>
                </div>
              </div>
              <label
                className="c9"
              >
                Country
              </label>
            </div>
            <div
              className="c14"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-level2"
                  className="c8"
                  data-cy="addressFormCountryArea"
                  disabled={false}
                  name="countryArea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  State/province
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c15"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c18 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c11 {
  color: #c22d74;
  font-size: 0.75rem;
}

.c12 {
  margin: 0;
}

.c15 {
  margin-bottom: 1.875rem;
}

.c17 {
  top: 100%;
}

.c9 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c13:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #c22d74;
  color: #c22d74;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c6:hover {
  color: #c22d74;
  outline-width: 1px;
  outline-style: solid;
  border-color: #c22d74;
  outline-color: #c22d74;
}

.c7 {
  position: relative;
  width: 100%;
}

.c8 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c16 {
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c10 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 > div {
  width: calc(50% - 1.875rem / 2);
}

.c14 {
  width: 100%;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c4 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="given-name"
                  className="c8"
                  data-cy="addressFormFirstNameField"
                  disabled={false}
                  name="firstName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  First Name
                </label>
              </div>
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <p
                  className="c12"
                >
                  This is error
                </p>
              </div>
            </div>
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="family-name"
                  className="c8"
                  data-cy="addressFormLastNameField"
                  disabled={false}
                  name="lastName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Last Name
                </label>
              </div>
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <p
                  className="c12"
                >
                  This is error
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="organization"
                  className="c8"
                  data-cy="addressFormCompanyNameField"
                  disabled={false}
                  name="companyName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Company Name (Optional)
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="tel"
                  className="c8"
                  data-cy="addressFormPhoneField"
                  disabled={false}
                  name="phone"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Phone
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c14"
        >
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-line1"
                  className="c8"
                  data-cy="addressFormStreetAddress1Field"
                  disabled={false}
                  name="streetAddress1"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Address line 1
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c14"
        >
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-line2"
                  className="c8"
                  data-cy="addressFormStreetAddress2Field"
                  disabled={false}
                  name="streetAddress2"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  Address line 2
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-level1"
                  className="c8"
                  data-cy="addressFormCityField"
                  disabled={false}
                  name="city"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  City
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="postal-code"
                  className="c8"
                  data-cy="addressFormPostalCodeField"
                  disabled={false}
                  name="postalCode"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  ZIP/Postal Code
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c15"
          >
            <div
              className="css-1pcexqc-container"
              onKeyDown={[Function]}
            >
              <div
                className="css-133ddnz-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-tntsk8"
                >
                  <div
                    className="css-151xaom-placeholder"
                  >
                    
                  </div>
                  <div
                    className="css-1g6gooi"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        data-cy="addressFormCountry"
                        disabled={false}
                        id="react-select-8-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c16"
                  rotate="false"
                >
                  <svg
                    height={10}
                    viewBox="0 0 32 32"
                    width={10}
                  >
                    <path
                      d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                      fill="#21125E"
                    />
                  </svg>
                </div>
              </div>
              <label
                className="c9"
              >
                Country
              </label>
            </div>
            <div
              className="c17"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c13"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-level2"
                  className="c8"
                  data-cy="addressFormCountryArea"
                  disabled={false}
                  name="countryArea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                />
                <label
                  className="c9"
                >
                  State/province
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c18"
  />
</div>
`;

exports[`Storyshots @components/organisms/AddressForm with partial data 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c16 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c12 {
  margin-bottom: 1.875rem;
}

.c15 {
  top: 100%;
}

.c9 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: transparent;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c14 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #f1f5f5;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c6:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c7 {
  position: relative;
  width: 100%;
}

.c8 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c13 {
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c5 {
  margin-bottom: 1.875rem;
  position: relative;
}

.c10 {
  position: absolute;
  top: 100%;
}

.c2 {
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 > div {
  width: calc(50% - 1.875rem / 2);
}

.c11 {
  width: 100%;
}

.c1 {
  width: 600px;
}

@media (max-width:540px) {
  .c4 > div {
    width: 100%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <form
      className="c2"
      onSubmit={[Function]}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="given-name"
                  className="c8"
                  data-cy="addressFormFirstNameField"
                  disabled={false}
                  name="firstName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="John"
                />
                <label
                  className="c9"
                >
                  First Name
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="family-name"
                  className="c8"
                  data-cy="addressFormLastNameField"
                  disabled={false}
                  name="lastName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="Doe"
                />
                <label
                  className="c9"
                >
                  Last Name
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="organization"
                  className="c8"
                  data-cy="addressFormCompanyNameField"
                  disabled={false}
                  name="companyName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="Mirumee"
                />
                <label
                  className="c9"
                >
                  Company Name (Optional)
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="tel"
                  className="c8"
                  data-cy="addressFormPhoneField"
                  disabled={false}
                  name="phone"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="555-55555"
                />
                <label
                  className="c9"
                >
                  Phone
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c11"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-line1"
                  className="c8"
                  data-cy="addressFormStreetAddress1Field"
                  disabled={false}
                  name="streetAddress1"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="Street line 1"
                />
                <label
                  className="c9"
                >
                  Address line 1
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c11"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-line2"
                  className="c8"
                  data-cy="addressFormStreetAddress2Field"
                  disabled={false}
                  name="streetAddress2"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="Street line 2"
                />
                <label
                  className="c9"
                >
                  Address line 2
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-level1"
                  className="c8"
                  data-cy="addressFormCityField"
                  disabled={false}
                  name="city"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="New York"
                />
                <label
                  className="c9"
                >
                  City
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="postal-code"
                  className="c8"
                  data-cy="addressFormPostalCodeField"
                  disabled={false}
                  name="postalCode"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="90210"
                />
                <label
                  className="c9"
                >
                  ZIP/Postal Code
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c12"
          >
            <div
              className="css-1pcexqc-container"
              onKeyDown={[Function]}
            >
              <div
                className="css-133ddnz-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="css-tntsk8"
                >
                  <div
                    className="css-dvua67-singleValue"
                  >
                    United States of America
                  </div>
                  <div
                    className="css-1g6gooi"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        data-cy="addressFormCountry"
                        disabled={false}
                        id="react-select-9-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c13"
                  rotate="false"
                >
                  <svg
                    height={10}
                    viewBox="0 0 32 32"
                    width={10}
                  >
                    <path
                      d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                      fill="#21125E"
                    />
                  </svg>
                </div>
              </div>
              <label
                className="c14"
              >
                Country
              </label>
            </div>
            <div
              className="c15"
            />
          </div>
          <div
            className="c5"
          >
            <div
              className="c6"
              disabled={false}
            >
              <div
                className="c7"
              >
                <input
                  autoComplete="address-level2"
                  className="c8"
                  data-cy="addressFormCountryArea"
                  disabled={false}
                  name="countryArea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  value="NY"
                />
                <label
                  className="c9"
                >
                  State/province
                </label>
              </div>
            </div>
            <div
              className="c10"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="c16"
  />
</div>
`;
